--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
     <title>React recipes</title>
   </head>
   <body>
-    <div id="root">
-      Hello world!
-    </div>
+    <div id="root" />
   </body>
 </html>
